changed logger format to json, improved readme
